fixed server image size on mobile/tablet

--- a/client/src/Components/ServerNav/ServerNav.scss
+++ b/client/src/Components/ServerNav/ServerNav.scss
@@ -191,3 +191,14 @@
         }
     }  
 }
+.server-icon-btn{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
